--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Model\ModelManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Component\ComView\ComView.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Component\ComTag.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Battle\Component\Property\EntityProperty.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Component\ComView\ActorView.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.Res.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Window\WindowMode.cs" />
@@ -160,6 +161,7 @@
     <Compile Include="Assets\Hotfix\Core\Base\LinkedList.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Config\ConfigManager.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\MultiDictionary.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Battle\Component\Property\ComProperty.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Scene\SceneManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\Joystick\Joystick.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Platform\Dev\DevCallbackMessage.cs" />
