--- a/Bundles/StandaloneWindows64/DefaultPackage/Simulate/PackageManifest_DefaultPackage_Simulate.json
+++ b/Bundles/StandaloneWindows64/DefaultPackage/Simulate/PackageManifest_DefaultPackage_Simulate.json
@@ -30,6 +30,13 @@
             "BundleID": 1
         },
         {
+            "Address": "tbskill",
+            "AssetPath": "Assets/Res/Config/tbskill.json",
+            "AssetGUID": "",
+            "AssetTags": [],
+            "BundleID": 1
+        },
+        {
             "Address": "Unity.Hotfix.dll",
             "AssetPath": "Assets/Res/DLL/Unity.Hotfix.dll.bytes",
             "AssetGUID": "",
@@ -74,7 +81,7 @@
             "UnityCRC": 0,
             "FileHash": "8e0b78f87b215ffbe6445533f7090724",
             "FileCRC": "00000000",
-            "FileSize": 302,
+            "FileSize": 505,
             "Encrypted": false,
             "Tags": [],
             "DependIDs": []
@@ -84,7 +91,7 @@
             "UnityCRC": 0,
             "FileHash": "083e6a08c2f0ee41263a000e26338562",
             "FileCRC": "00000000",
-            "FileSize": 381084,
+            "FileSize": 413212,
             "Encrypted": false,
             "Tags": [],
             "DependIDs": []
