--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ProtobufObject\ProtobufObject.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\LinkedListRange.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\Component\Collider\ColliderHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Component\ComTransform.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Vector2\Vector2Extension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\UnityWebRequest\UnityWebRequestExtension.cs" />
@@ -275,7 +276,6 @@
     <Compile Include="Assets\Hotfix\Logic\UI\UIMain\UIMainPanel.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\DataStruct\TypeNamePair.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\BehavoirTree\BTScript\BTAction.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\Component\Collider\ColliderHandlerBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Platform\BasePlatform.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolManager.ObjectPool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Battle\Component\Buff\BuffProperty.cs" />
